prqlc/prqlc/tests/integration/snapshots/integration__queries__debug_lineage__sort_3.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "from [{track_id=0, album_id=1, genre_id=2}]\nselect { AA=track_id, album_id, genre_id }\nsort AA\njoin side:left [{album_id=1, album_title=\"Songs\"}] (==album_id)\nselect { AA, AT = album_title ?? \"unknown\", genre_id }\nfilter AA < 25\njoin side:left [{genre_id=1, genre_title=\"Rock\"}] (==genre_id)\nselect { AA, AT, GT = genre_title ?? \"unknown\" }\n"
input_file: prqlc/prqlc/tests/integration/queries/sort_3.prql
---
frames:
- - 1:44-86
  - columns:
    - !Single
      name:
      - AA
      target_id: 157
      target_name: null
    - !Single
      name:
      - _literal_151
      - album_id
      target_id: 158
      target_name: null
    - !Single
      name:
      - _literal_151
      - genre_id
      target_id: 159
      target_name: null
    inputs:
    - id: 151
      name: _literal_151
      table:
      - default_db
      - _literal_151
- - 1:87-94
  - columns:
    - !Single
      name:
      - AA
      target_id: 157
      target_name: null
    - !Single
      name:
      - _literal_151
      - album_id
      target_id: 158
      target_name: null
    - !Single
      name:
      - _literal_151
      - genre_id
      target_id: 159
      target_name: null
    inputs:
    - id: 151
      name: _literal_151
      table:
      - default_db
      - _literal_151
- - 1:95-158
  - columns:
    - !Single
      name:
      - AA
      target_id: 157
      target_name: null
    - !Single
      name:
      - _literal_151
      - album_id
      target_id: 158
      target_name: null
    - !Single
      name:
      - _literal_151
      - genre_id
      target_id: 159
      target_name: null
    - !Single
      name:
      - _literal_139
      - album_id
      target_id: 139
      target_name: album_id
    - !Single
      name:
      - _literal_139
      - album_title
      target_id: 139
      target_name: album_title
    inputs:
    - id: 151
      name: _literal_151
      table:
      - default_db
      - _literal_151
    - id: 139
      name: _literal_139
      table:
      - default_db
      - _literal_139
- - 1:159-213
  - columns:
    - !Single
      name:
      - AA
      target_id: 172
      target_name: null
    - !Single
      name:
      - AT
      target_id: 173
      target_name: null
    - !Single
      name:
      - _literal_151
      - genre_id
      target_id: 177
      target_name: null
    inputs:
    - id: 151
      name: _literal_151
      table:
      - default_db
      - _literal_151
    - id: 139
      name: _literal_139
      table:
      - default_db
      - _literal_139
- - 1:214-228
  - columns:
    - !Single
      name:
      - AA
      target_id: 172
      target_name: null
    - !Single
      name:
      - AT
      target_id: 173
      target_name: null
    - !Single
      name:
      - _literal_151
      - genre_id
      target_id: 177
      target_name: null
    inputs:
    - id: 151
      name: _literal_151
      table:
      - default_db
      - _literal_151
    - id: 139
      name: _literal_139
      table:
      - default_db
      - _literal_139
- - 1:229-291
  - columns:
    - !Single
      name:
      - AA
      target_id: 172
      target_name: null
    - !Single
      name:
      - AT
      target_id: 173
      target_name: null
    - !Single
      name:
      - _literal_151
      - genre_id
      target_id: 177
      target_name: null
    - !Single
      name:
      - _literal_126
      - genre_id
      target_id: 126
      target_name: genre_id
    - !Single
      name:
      - _literal_126
      - genre_title
      target_id: 126
      target_name: genre_title
    inputs:
    - id: 151
      name: _literal_151
      table:
      - default_db
      - _literal_151
    - id: 139
      name: _literal_139
      table:
      - default_db
      - _literal_139
    - id: 126
      name: _literal_126
      table:
      - default_db
      - _literal_126
- - 1:292-340
  - columns:
    - !Single
      name:
      - AA
      target_id: 192
      target_name: null
    - !Single
      name:
      - AT
      target_id: 193
      target_name: null
    - !Single
      name:
      - GT
      target_id: 194
      target_name: null
    inputs:
    - id: 151
      name: _literal_151
      table:
      - default_db
      - _literal_151
    - id: 139
      name: _literal_139
      table:
      - default_db
      - _literal_139
    - id: 126
      name: _literal_126
      table:
      - default_db
      - _literal_126
nodes:
- id: 126
  kind: Array
  span: 1:244-278
  children:
  - 127
  parent: 191
- id: 127
  kind: Tuple
  span: 1:245-277
  children:
  - 128
  - 129
  parent: 126
- id: 128
  kind: Literal
  span: 1:255-256
  alias: genre_id
  parent: 127
- id: 129
  kind: Literal
  span: 1:270-276
  alias: genre_title
  parent: 127
- id: 139
  kind: Array
  span: 1:110-145
  children:
  - 140
  parent: 171
- id: 140
  kind: Tuple
  span: 1:111-144
  children:
  - 141
  - 142
  parent: 139
- id: 141
  kind: Literal
  span: 1:121-122
  alias: album_id
  parent: 140
- id: 142
  kind: Literal
  span: 1:136-143
  alias: album_title
  parent: 140
- id: 151
  kind: Array
  span: 1:0-43
  children:
  - 152
  parent: 161
- id: 152
  kind: Tuple
  span: 1:6-42
  children:
  - 153
  - 154
  - 155
  parent: 151
- id: 153
  kind: Literal
  span: 1:16-17
  alias: track_id
  parent: 152
- id: 154
  kind: Literal
  span: 1:28-29
  alias: album_id
  parent: 152
- id: 155
  kind: Literal
  span: 1:40-41
  alias: genre_id
  parent: 152
- id: 157
  kind: Ident
  span: 1:56-64
  alias: AA
  ident: !Ident
  - this
  - _literal_151
  - track_id
  targets:
  - 151
  parent: 160
- id: 158
  kind: Ident
  span: 1:66-74
  ident: !Ident
  - this
  - _literal_151
  - album_id
  targets:
  - 151
  parent: 160
- id: 159
  kind: Ident
  span: 1:76-84
  ident: !Ident
  - this
  - _literal_151
  - genre_id
  targets:
  - 151
  parent: 160
- id: 160
  kind: Tuple
  span: 1:51-86
  children:
  - 157
  - 158
  - 159
  parent: 161
- id: 161
  kind: 'TransformCall: Select'
  span: 1:44-86
  children:
  - 151
  - 160
  parent: 164
- id: 162
  kind: Ident
  span: 1:92-94
  ident: !Ident
  - this
  - AA
  targets:
  - 157
  parent: 164
- id: 164
  kind: 'TransformCall: Sort'
  span: 1:87-94
  children:
  - 161
  - 162
  parent: 171
- id: 167
  kind: RqOperator
  span: 1:147-157
  targets:
  - 169
  - 170
  parent: 171
- id: 169
  kind: Ident
  span: 1:149-157
  ident: !Ident
  - this
  - _literal_151
  - album_id
  targets:
  - 158
- id: 170
  kind: Ident
  span: 1:149-157
  ident: !Ident
  - that
  - _literal_139
  - album_id
  targets:
  - 139
- id: 171
  kind: 'TransformCall: Join'
  span: 1:95-158
  children:
  - 164
  - 139
  - 167
  parent: 179
- id: 172
  kind: Ident
  span: 1:168-170
  ident: !Ident
  - this
  - AA
  targets:
  - 157
  parent: 178
- id: 173
  kind: RqOperator
  span: 1:177-201
  alias: AT
  targets:
  - 175
  - 176
  parent: 178
- id: 175
  kind: Ident
  span: 1:177-188
  ident: !Ident
  - this
  - _literal_139
  - album_title
  targets:
  - 139
- id: 176
  kind: Literal
  span: 1:192-201
- id: 177
  kind: Ident
  span: 1:203-211
  ident: !Ident
  - this
  - _literal_151
  - genre_id
  targets:
  - 159
  parent: 178
- id: 178
  kind: Tuple
  span: 1:166-213
  children:
  - 172
  - 173
  - 177
  parent: 179
- id: 179
  kind: 'TransformCall: Select'
  span: 1:159-213
  children:
  - 171
  - 178
  parent: 184
- id: 180
  kind: RqOperator
  span: 1:221-228
  targets:
  - 182
  - 183
  parent: 184
- id: 182
  kind: Ident
  span: 1:221-223
  ident: !Ident
  - this
  - AA
  targets:
  - 172
- id: 183
  kind: Literal
  span: 1:226-228
- id: 184
  kind: 'TransformCall: Filter'
  span: 1:214-228
  children:
  - 179
  - 180
  parent: 191
- id: 187
  kind: RqOperator
  span: 1:280-290
  targets:
  - 189
  - 190
  parent: 191
- id: 189
  kind: Ident
  span: 1:282-290
  ident: !Ident
  - this
  - _literal_151
  - genre_id
  targets:
  - 177
- id: 190
  kind: Ident
  span: 1:282-290
  ident: !Ident
  - that
  - _literal_126
  - genre_id
  targets:
  - 126
- id: 191
  kind: 'TransformCall: Join'
  span: 1:229-291
  children:
  - 184
  - 126
  - 187
  parent: 199
- id: 192
  kind: Ident
  span: 1:301-303
  ident: !Ident
  - this
  - AA
  targets:
  - 172
  parent: 198
- id: 193
  kind: Ident
  span: 1:305-307
  ident: !Ident
  - this
  - AT
  targets:
  - 173
  parent: 198
- id: 194
  kind: RqOperator
  span: 1:314-338
  alias: GT
  targets:
  - 196
  - 197
  parent: 198
- id: 196
  kind: Ident
  span: 1:314-325
  ident: !Ident
  - this
  - _literal_126
  - genre_title
  targets:
  - 126
- id: 197
  kind: Literal
  span: 1:329-338
- id: 198
  kind: Tuple
  span: 1:299-340
  children:
  - 192
  - 193
  - 194
  parent: 199
- id: 199
  kind: 'TransformCall: Select'
  span: 1:292-340
  children:
  - 191
  - 198
ast:
  name: Project
  stmts:
  - VarDef:
      kind: Main
      name: main
      value:
        Pipeline:
          exprs:
          - FuncCall:
              name:
                Ident:
                - from
                span: 1:0-4
              args:
              - Array:
                - Tuple:
                  - Literal:
                      Integer: 0
                    span: 1:16-17
                    alias: track_id
                  - Literal:
                      Integer: 1
                    span: 1:28-29
                    alias: album_id
                  - Literal:
                      Integer: 2
                    span: 1:40-41
                    alias: genre_id
                  span: 1:6-42
                span: 1:5-43
            span: 1:0-43
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:44-50
              args:
              - Tuple:
                - Ident:
                  - track_id
                  span: 1:56-64
                  alias: AA
                - Ident:
                  - album_id
                  span: 1:66-74
                - Ident:
                  - genre_id
                  span: 1:76-84
                span: 1:51-86
            span: 1:44-86
          - FuncCall:
              name:
                Ident:
                - sort
                span: 1:87-91
              args:
              - Ident:
                - AA
                span: 1:92-94
            span: 1:87-94
          - FuncCall:
              name:
                Ident:
                - join
                span: 1:95-99
              args:
              - Array:
                - Tuple:
                  - Literal:
                      Integer: 1
                    span: 1:121-122
                    alias: album_id
                  - Literal:
                      String: Songs
                    span: 1:136-143
                    alias: album_title
                  span: 1:111-144
                span: 1:110-145
              - Unary:
                  op: EqSelf
                  expr:
                    Ident:
                    - album_id
                    span: 1:149-157
                span: 1:147-157
              named_args:
                side:
                  Ident:
                  - left
                  span: 1:105-109
            span: 1:95-158
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:159-165
              args:
              - Tuple:
                - Ident:
                  - AA
                  span: 1:168-170
                - Binary:
                    left:
                      Ident:
                      - album_title
                      span: 1:177-188
                    op: Coalesce
                    right:
                      Literal:
                        String: unknown
                      span: 1:192-201
                  span: 1:177-201
                  alias: AT
                - Ident:
                  - genre_id
                  span: 1:203-211
                span: 1:166-213
            span: 1:159-213
          - FuncCall:
              name:
                Ident:
                - filter
                span: 1:214-220
              args:
              - Binary:
                  left:
                    Ident:
                    - AA
                    span: 1:221-223
                  op: Lt
                  right:
                    Literal:
                      Integer: 25
                    span: 1:226-228
                span: 1:221-228
            span: 1:214-228
          - FuncCall:
              name:
                Ident:
                - join
                span: 1:229-233
              args:
              - Array:
                - Tuple:
                  - Literal:
                      Integer: 1
                    span: 1:255-256
                    alias: genre_id
                  - Literal:
                      String: Rock
                    span: 1:270-276
                    alias: genre_title
                  span: 1:245-277
                span: 1:244-278
              - Unary:
                  op: EqSelf
                  expr:
                    Ident:
                    - genre_id
                    span: 1:282-290
                span: 1:280-290
              named_args:
                side:
                  Ident:
                  - left
                  span: 1:239-243
            span: 1:229-291
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:292-298
              args:
              - Tuple:
                - Ident:
                  - AA
                  span: 1:301-303
                - Ident:
                  - AT
                  span: 1:305-307
                - Binary:
                    left:
                      Ident:
                      - genre_title
                      span: 1:314-325
                    op: Coalesce
                    right:
                      Literal:
                        String: unknown
                      span: 1:329-338
                  span: 1:314-338
                  alias: GT
                span: 1:299-340
            span: 1:292-340
        span: 1:0-340
    span: 1:0-340
