prqlc/prqlc/tests/integration/snapshots/integration__queries__debug_lineage__sort_cast_filter_join_select.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "from albums\nselect { this.`title`, this.`artist_id`, this.`album_id` }\nsort { this.`artist_id`, this.`album_id` }\nderive { `artist_id` = as `double precision` this.`artist_id` }\nfilter (this.`artist_id` != null)\njoin side:left artists (this.`artist_id` == that.`artist_id`)\nselect {this.`artist_id`, this.`title`, this.`name`}\n"
input_file: prqlc/prqlc/tests/integration/queries/sort_cast_filter_join_select.prql
---
frames:
- - 1:12-70
  - columns:
    - !Single
      name:
      - albums
      - title
      target_id: 133
      target_name: null
    - !Single
      name:
      - albums
      - artist_id
      target_id: 134
      target_name: null
    - !Single
      name:
      - albums
      - album_id
      target_id: 135
      target_name: null
    inputs:
    - id: 131
      name: albums
      table:
      - default_db
      - albums
- - 1:71-113
  - columns:
    - !Single
      name:
      - albums
      - title
      target_id: 133
      target_name: null
    - !Single
      name:
      - albums
      - artist_id
      target_id: 134
      target_name: null
    - !Single
      name:
      - albums
      - album_id
      target_id: 135
      target_name: null
    inputs:
    - id: 131
      name: albums
      table:
      - default_db
      - albums
- - 1:114-177
  - columns:
    - !Single
      name:
      - albums
      - title
      target_id: 133
      target_name: null
    - !Single
      name: null
      target_id: 134
      target_name: null
    - !Single
      name:
      - albums
      - album_id
      target_id: 135
      target_name: null
    - !Single
      name:
      - artist_id
      target_id: 142
      target_name: null
    inputs:
    - id: 131
      name: albums
      table:
      - default_db
      - albums
- - 1:178-211
  - columns:
    - !Single
      name:
      - albums
      - title
      target_id: 133
      target_name: null
    - !Single
      name: null
      target_id: 134
      target_name: null
    - !Single
      name:
      - albums
      - album_id
      target_id: 135
      target_name: null
    - !Single
      name:
      - artist_id
      target_id: 142
      target_name: null
    inputs:
    - id: 131
      name: albums
      table:
      - default_db
      - albums
- - 1:212-273
  - columns:
    - !Single
      name:
      - albums
      - title
      target_id: 133
      target_name: null
    - !Single
      name: null
      target_id: 134
      target_name: null
    - !Single
      name:
      - albums
      - album_id
      target_id: 135
      target_name: null
    - !Single
      name:
      - artist_id
      target_id: 142
      target_name: null
    - !All
      input_id: 116
      except: []
    inputs:
    - id: 131
      name: albums
      table:
      - default_db
      - albums
    - id: 116
      name: artists
      table:
      - default_db
      - artists
- - 1:274-326
  - columns:
    - !Single
      name:
      - artist_id
      target_id: 157
      target_name: null
    - !Single
      name:
      - albums
      - title
      target_id: 158
      target_name: null
    - !Single
      name:
      - artists
      - name
      target_id: 159
      target_name: null
    inputs:
    - id: 131
      name: albums
      table:
      - default_db
      - albums
    - id: 116
      name: artists
      table:
      - default_db
      - artists
nodes:
- id: 116
  kind: Ident
  span: 1:227-234
  ident: !Ident
  - default_db
  - artists
  parent: 156
- id: 131
  kind: Ident
  span: 1:0-11
  ident: !Ident
  - default_db
  - albums
  parent: 137
- id: 133
  kind: Ident
  span: 1:21-33
  ident: !Ident
  - this
  - albums
  - title
  targets:
  - 131
  parent: 136
- id: 134
  kind: Ident
  span: 1:35-51
  ident: !Ident
  - this
  - albums
  - artist_id
  targets:
  - 131
  parent: 136
- id: 135
  kind: Ident
  span: 1:53-68
  ident: !Ident
  - this
  - albums
  - album_id
  targets:
  - 131
  parent: 136
- id: 136
  kind: Tuple
  span: 1:19-70
  children:
  - 133
  - 134
  - 135
  parent: 137
- id: 137
  kind: 'TransformCall: Select'
  span: 1:12-70
  children:
  - 131
  - 136
  parent: 141
- id: 138
  kind: Ident
  span: 1:78-94
  ident: !Ident
  - this
  - albums
  - artist_id
  targets:
  - 134
  parent: 141
- id: 139
  kind: Ident
  span: 1:96-111
  ident: !Ident
  - this
  - albums
  - album_id
  targets:
  - 135
  parent: 141
- id: 141
  kind: 'TransformCall: Sort'
  span: 1:71-113
  children:
  - 137
  - 138
  - 139
  parent: 146
- id: 142
  kind: RqOperator
  span: 1:137-175
  alias: artist_id
  targets:
  - 144
  parent: 145
- id: 144
  kind: Ident
  span: 1:159-175
  ident: !Ident
  - this
  - albums
  - artist_id
  targets:
  - 134
- id: 145
  kind: Tuple
  span: 1:121-177
  children:
  - 142
  parent: 146
- id: 146
  kind: 'TransformCall: Derive'
  span: 1:114-177
  children:
  - 141
  - 145
  parent: 151
- id: 147
  kind: RqOperator
  span: 1:186-210
  targets:
  - 149
  - 150
  parent: 151
- id: 149
  kind: Ident
  span: 1:186-202
  ident: !Ident
  - this
  - artist_id
  targets:
  - 142
- id: 150
  kind: Literal
  span: 1:206-210
- id: 151
  kind: 'TransformCall: Filter'
  span: 1:178-211
  children:
  - 146
  - 147
  parent: 156
- id: 152
  kind: RqOperator
  span: 1:236-272
  targets:
  - 154
  - 155
  parent: 156
- id: 154
  kind: Ident
  span: 1:236-252
  ident: !Ident
  - this
  - artist_id
  targets:
  - 142
- id: 155
  kind: Ident
  span: 1:256-272
  ident: !Ident
  - that
  - artists
  - artist_id
  targets:
  - 116
- id: 156
  kind: 'TransformCall: Join'
  span: 1:212-273
  children:
  - 151
  - 116
  - 152
  parent: 161
- id: 157
  kind: Ident
  span: 1:282-298
  ident: !Ident
  - this
  - artist_id
  targets:
  - 142
  parent: 160
- id: 158
  kind: Ident
  span: 1:300-312
  ident: !Ident
  - this
  - albums
  - title
  targets:
  - 133
  parent: 160
- id: 159
  kind: Ident
  span: 1:314-325
  ident: !Ident
  - this
  - artists
  - name
  targets:
  - 116
  parent: 160
- id: 160
  kind: Tuple
  span: 1:281-326
  children:
  - 157
  - 158
  - 159
  parent: 161
- id: 161
  kind: 'TransformCall: Select'
  span: 1:274-326
  children:
  - 156
  - 160
ast:
  name: Project
  stmts:
  - VarDef:
      kind: Main
      name: main
      value:
        Pipeline:
          exprs:
          - FuncCall:
              name:
                Ident:
                - from
                span: 1:0-4
              args:
              - Ident:
                - albums
                span: 1:5-11
            span: 1:0-11
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:12-18
              args:
              - Tuple:
                - Ident:
                  - this
                  - title
                  span: 1:21-33
                - Ident:
                  - this
                  - artist_id
                  span: 1:35-51
                - Ident:
                  - this
                  - album_id
                  span: 1:53-68
                span: 1:19-70
            span: 1:12-70
          - FuncCall:
              name:
                Ident:
                - sort
                span: 1:71-75
              args:
              - Tuple:
                - Ident:
                  - this
                  - artist_id
                  span: 1:78-94
                - Ident:
                  - this
                  - album_id
                  span: 1:96-111
                span: 1:76-113
            span: 1:71-113
          - FuncCall:
              name:
                Ident:
                - derive
                span: 1:114-120
              args:
              - Tuple:
                - FuncCall:
                    name:
                      Ident:
                      - as
                      span: 1:137-139
                    args:
                    - Ident:
                      - double precision
                      span: 1:140-158
                    - Ident:
                      - this
                      - artist_id
                      span: 1:159-175
                  span: 1:137-175
                  alias: artist_id
                span: 1:121-177
            span: 1:114-177
          - FuncCall:
              name:
                Ident:
                - filter
                span: 1:178-184
              args:
              - Binary:
                  left:
                    Ident:
                    - this
                    - artist_id
                    span: 1:186-202
                  op: Ne
                  right:
                    Literal: 'Null'
                    span: 1:206-210
                span: 1:186-210
            span: 1:178-211
          - FuncCall:
              name:
                Ident:
                - join
                span: 1:212-216
              args:
              - Ident:
                - artists
                span: 1:227-234
              - Binary:
                  left:
                    Ident:
                    - this
                    - artist_id
                    span: 1:236-252
                  op: Eq
                  right:
                    Ident:
                    - that
                    - artist_id
                    span: 1:256-272
                span: 1:236-272
              named_args:
                side:
                  Ident:
                  - left
                  span: 1:222-226
            span: 1:212-273
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:274-280
              args:
              - Tuple:
                - Ident:
                  - this
                  - artist_id
                  span: 1:282-298
                - Ident:
                  - this
                  - title
                  span: 1:300-312
                - Ident:
                  - this
                  - name
                  span: 1:314-325
                span: 1:281-326
            span: 1:274-326
        span: 1:0-326
    span: 1:0-326
